--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "awcodes/palette": "^1.0",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9",
-        "wiebenieuwenhuis/filament-code-editor": "^1.1"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
